--- a/styles/_article-info.scss
+++ b/styles/_article-info.scss
@@ -4,13 +4,13 @@
     width: 100%;
     border-radius: 40px;
     box-shadow: 2px 2px 5px 5px rgba(239, 153, 43, 0.5);
-    padding: 20px 20px;
+    padding: 20px;
     transition: .5s;
     &:first-child {
         margin-left: 10px;
     }
     &:hover {
-        transform: scale(0.95);
+        transform: scale(0.97);
         background-color: rgba(239, 153, 43, 0.1);
     }
     img {
