--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -5,7 +5,7 @@
 }
 
 html {
-    font-size: 20px;
+    font-size: 18px;
     scroll-behavior: smooth;
 }
 
@@ -43,7 +43,7 @@ section {
 
 a {
     text-decoration: none;
-    color: #ef992b;
+    color: rgb(241, 131, 34);
 }
 
 .noscroll {
@@ -52,7 +52,7 @@ a {
 
 h1 {
     color: rgb(249, 221, 118);
-    font-size: 3.5rem;
+    font-size: 3rem;
     visibility: hidden;
     transform: translateY(30px);
     transition: 1s;
