--- a/styles/_button.scss
+++ b/styles/_button.scss
@@ -10,12 +10,12 @@
     margin: 50px auto 0;
     text-align: center;
     line-height: 40px;
-    transition: background .5s linear;
+    transition: background .3s linear;
     &:not(:last-child) {
         margin-right: 30px;
     }
     &:hover {
-        background: rgba(245, 191, 98, 0.8);
+        background: rgb(241, 131, 34, 0.8);
     }
 }
 
